--- a/static/css/app.css
+++ b/static/css/app.css
@@ -6,6 +6,70 @@ li:active {
     color: yellow;
 }
 
+.box{
+    display: inline-block;
+    width: 100%;
+    background: #fff;
+    color: #333;
+    border-radius: 5px;
+    margin-top: 60px;
+}
+
+.box > p{
+    font-weight: bold;
+    border-radius: 5px 5px 0 0;
+    background-color: #F7F7F7;
+    border-bottom: 1px solid #D8D8D8;
+    padding: 12px 0;
+    margin-bottom: 0;
+}
+
+.box > li:nth-child(2){
+    border-radius: 0 0 0 15px;
+}
+
+.box > li:last-child{
+    border-radius: 0 0 15px 0;
+}
+
+.box > li{
+    width: 16.6%;
+    height: 100px;
+    text-align: center;
+    float: left;
+    padding: 13px 8px 16px;
+    box-sizing: border-box;
+    background: #fff;
+    list-style: none;
+}
+
+@media screen and (max-width:767px){
+.box > li:nth-child(4) {
+    border-top: 1px solid #D8D8D8;
+    }
+}
+@media screen and (max-width:767px){
+    .box > li:nth-child(5) {
+        border-top: 1px solid #D8D8D8;
+        }
+    }
+@media screen and (max-width:767px){
+    .box > li:nth-child(6) {
+        border-top: 1px solid #D8D8D8;
+        border-radius: 0 0 0 15px;
+        }
+    }
+@media screen and (max-width:767px){
+.box > li:last-child {
+    border-top: 1px solid #D8D8D8;
+    }
+}
+@media screen and (max-width:767px){
+    .box > li{
+        width:50%
+    }
+}
+
 .land
 {
     fill-opacity: 1;
