--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -1,11 +1,11 @@
 <header class="masthead mb-auto">
-    <div class="inner">
-    <h3 class="masthead-brand">Corona</h3>
-    <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link " href="/">Home</a>
-        <a class="nav-link active" href="chart">Chart</a>
-        <a class="nav-link" href="/map">Map</a>
-        <a class="nav-link" href="/mask">Mask</a>
-    </nav>
-    </div>
+        <div id="NavContainer">
+            <h1 id="logo"><i class="fas fa-viruses"></i>Covid-19</h1>
+             <ul id="NavMenu">
+                <li id="Navlist"><a href="/"><i class="fas fa-home"></i> Home</li></a>
+                <li id="Navlist"><a href="/chart"><i class="fas fa-chart-line"></i> Chart</li></a>
+                <li id="Navlist"><a href="/map"><i class="fas fa-map"></i> Map</li></a>
+                <li id="Navlist"><a href="/clinic"><i class="fas fa-clinic-medical"></i>Clinic</li></a>
+            </ul>
 </header>
+
